# agentic_os

./:  .env.example  .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  .pyre_configuration  AGENTS.md  README.md  agent-card.json  apply_migration_v4.py  check_qwen_dim.py  compile_audit.txt  compile_audit_report.txt  compile_audit_report_utf8.txt  config.py  docker-compose.yml  entrypoint.sh  init_count.txt  list_models.py  main.py  mypy_report.txt  path  py_typed_count.txt  pyproject.toml  pyright_report.json  pyrightconfig.json  refactor.py  requirements.txt  run_agent_rag.py  seed_db.py  server.py  skill.md  test_cognitive_retriever.py  test_rl.py  verify_indexing.py  verify_intent.py  verify_rag.py
agentic_rl_router/: README.md  pyproject.toml  schema.sql
agentic_rl_router/agentic_rl_router/: __init__.py  main.py
agentic_rl_router/agentic_rl_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentic_rl_router/agentic_rl_router/api/: dependencies.py
agentic_rl_router/agentic_rl_router/api/routers/: debug.py  feedback.py  health.py  refine.py  routing.py
agentic_rl_router/agentic_rl_router/application/services/: feedback_service.py  routing_service.py
agentic_rl_router/agentic_rl_router/domain/: __init__.py  bandit.py  drift.py  features.py  models.py  refinement.py  reward.py
agentic_rl_router/agentic_rl_router/infrastructure/: __init__.py  config.py  db.py  repositories.py
agentic_rl_router/agentic_rl_router/schemas/: api_models.py
agentic_rl_router/scripts/: train_synthetic.py
agentic_rl_router/tests/api/: test_server.py
agentic_rl_router/tests/domain/: __init__.py  test_bandit.py  test_drift.py  test_refinement.py  test_reward.py
agentos_core/: Dockerfile  Dockerfile.tools  README.md  config.py  docker-compose.yml  llm.py  main.py  migrate_and_seed.py  pyproject.toml  requirements.txt  server.py  state.py  test_ws.py  tool_client.py  tools.py
agentos_core/agentos_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentos_core/agentos_tools_node/: README.md
agentos_core/agentos_tools_node/docs/adr/: 001-per-call-jwt-auth.md
agentos_core/agentos_tools_node/src/AgentOSToolsNode/: Program.cs  (+1 more)
agentos_core/agents/: __init__.py  code_agent.py  email_agent.py  productivity_agent.py  research_agent.py  sql_agent.py  universal_agent.py
agentos_core/devops_auto/docs/: architecture.md
agentos_core/docs/: architecture.md
agentos_core/docs/adr/: 003-long-lived-loop.md  004-secure-tools-node.md  005-batching-at-router.md  006-subprocess-sandboxing.md  007-domain-driven-module-isolation.md  README.md
agentos_core/docs/components/: devops_auto.md  execution_sandbox.md  lane_queue.md  voice.md
agentos_core/graph/: blueprint.py  state.py
agentos_core/graph/nodes/: supervisor.py
agentos_core/llm_router/: README.md  __init__.py  backend.py  models.py  router.py
agentos_core/llm_router/backends/: llama_native.py  ollama_api.py
agentos_core/llm_router/docs/: api.md  architecture.md
agentos_core/loop/: __init__.py  rag_evaluator.py  routing.py  thought_loop.py
agentos_core/openclaw-tools-node/: OpenClawTools.slnx
agentos_core/productivity/: README.md  integrations.py  models.py  notes.py  task_planner.py
agentos_core/productivity/docs/: architecture.md
agentos_core/prompts/: code_agent_prompt.md  sql_agent_prompt.md
agentos_core/router/: batch_manager.py
agentos_core/security/: README.md  certs.py  jwt_auth.py
agentos_core/tests/: conftest.py  test_chat_bridge.py  test_devops.py  test_devops_dryrun.py  test_docs_alignment.py  test_integration_health.py  test_llm_router.py  test_loop_project.py  test_productivity.py  test_productivity_docs.py  test_productivity_rag.py  test_react.py  test_runner.py  test_tools.py
agentos_core/utils/: auth.py
agentos_core/voice/: stt_engine.py  tts_generator.py
agentos_memory/: ONBOARDING.md  README.md  config.py  pyproject.toml
agentos_memory/agent_rag/: __init__.py
agentos_memory/agent_rag/ingestion/: docling_chunker.py  docling_parser.py  worker.py
agentos_memory/agent_rag/retrieval/: __init__.py  collapsed_tree.py  retriever.py  speculative_fractal_rag.py
agentos_memory/agent_rag/validation/: agents.py  router.py
agentos_memory/agentos_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentos_memory/docs/: api.md  architecture.md  rag_architecture.md  rag_schema_design.md
agentos_memory/docs/adr/: 001-pgvector-and-embeddings.md
agentos_memory/docs/components/: agent_memory.md  agent_rag.md
agentos_memory/tests/: conftest.py  live_docling_test.py  test_docling_integration.py  test_fractal_cache.py  test_hybrid_retriever.py  test_ollama_isolation.py  test_rag_end_to_end.py  test_rag_schema.py  test_speculative_rag.py  test_tree_store_unit.py  test_vector_store.py
agentos_skills/: README.md  pyproject.toml
agentos_skills/agentos_skills.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentos_skills/docs/: architecture.md
agentos_skills/docs/adr/: 001-chunking-and-reranking.md  001-upskill-format.md
agentos_skills/docs/components/: agent_skills.md
agentos_skills/skills/: README.md
agentos_skills/skills/nl-to-sql-schema-aware/: SKILL.md
agentos_skills/skills/postgres-multi-hop-traversal/: SKILL.md
agentos_skills/skills/reward-shaper/: SKILL.md  plugin.json
agentos_skills/tests/: test_retriever.py
skills/: pyproject.toml
skills/docs/: api.md
skills/docs/components/: agent_skills.md
skills/hugging-face-tool-builder/: SKILL.md  skill_meta.json
skills/reward-shaper/: skill_meta.json
skills/skills/: INSTALLATION.md  README.md
skills/skills/.codex/: skills-index.json
skills/skills/claude-skills/: CLAUDE.md  CONTRIBUTING.md  mkdocs.yml
skills/skills/custom-gpt/: product-manager-gpt.md  solo-founder-gpt.md
skills/skills/docs/: getting-started.md  index.md
skills/skills/engineering-team/: CLAUDE.md  SKILL.md
skills/skills/postgres-multi-hop-traversal/: skill_meta.json
skills/skills/project-management/: SKILL.md
(+953 files in other folders)
