[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-os"
version = "0.1.0"
description = "Monorepo for Agentic OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "ollama>=0.4.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["agentos_core", "agentos_memory", "agentos_skills", "agentos_router", "agentos_gateway", "."]
include = [
    "agentos_gateway*",
    "agent_core*",
    "agent_memory*",
    "agent_skills*",
    "agent_rag*",
    "agentos_router*",
    "llm_router*",
    "lane_queue*",
    "sandbox*",
    "security*",
    "voice*",
    "productivity*",
    "devops_auto*",
    "projects*"
]

[project.scripts]
agent-os = "agentos_gateway.main:main"
