[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-os"
version = "0.1.0"
description = "Industrial-grade Agentic OS Monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "ollama>=0.4.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_config*",
    "agent_core*",
    "agent_memory*",
    "agent_skills*",
    "rag*",
    "productivity*",
    "sandbox*",
    "agent_security*",
    "voice*",
    "gateway*",
    "rl_router*",
    "llm_router*",
    "lane_queue*",
    "ui*",
]

[project.optional-dependencies]
# Install with: pip install -e ".[browser]"
browser = ["playwright>=1.44.0"]

[project.scripts]
agent-os = "gateway.main:main"
