[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos_memory"
version = "0.1.0"
description = "Durable memory and RAG subsystem for Agent OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "ollama>=0.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory*", "agent_rag*"]
