[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos_skills"
version = "0.1.0"
description = "Skill discovery and retrieval subsystem for Agent OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentos_memory",
    "ollama>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_skills*"]
